@@ -111,7 +111,6 @@
             --add-opens java.base/java.util=ALL-UNNAMED
             --add-exports java.base/sun.security.jca=ALL-UNNAMED
             --add-exports java.base/sun.security.util=ALL-UNNAMED
-            --add-exports java.base/sun.security.x509=ALL-UNNAMED
             --add-exports java.base/jdk.internal.util=ALL-UNNAMED
             --add-exports java.base/jdk.internal.util.random=ALL-UNNAMED
             -Duser.language=en -Duser.region=US
